@@ -32,7 +32,9 @@ Version 1.0.8.11
      * UPC (Viraj Sinha)
      * Urbi (Alexandre Morgand)
      * Vedit (Pauli Lindgren)
-  - Updated aliasd.php contrib script (SF#3073275, count)
+  -  Updated aliasd.php contrib script (SF#3073275, count)
+  -  Fallback to "text" when extension is unknown (SF#3514714, murkymark, BenBE)
+  -  detect extensions case-insensitive (SF#3514714, murkymark, BenBE)
   -  Improvements to language files (BenBE)
      * Symbol and char literal handling for Scala (Paul Butcher, BenBE)
      * Multiline comments of F# weren't actually multiline (BenBE)
